cc_library(
    name = "environment",
    deps = [
        "@com_github_google_glog//:glog",
        "@com_github_google_googletest//:gtest",
    ],
    hdrs = [
        "environment.h"
    ],
    # srcs = [
    #     "environment.cc"
    # ],
)

cc_test(
    name = "stack-trace-failure",
    deps = [
        "@com_github_google_glog//:glog",
        "@com_github_google_googletest//:gtest_main",
        ":environment",
    ],
    srcs = [
        "stack-trace-failure1.cc",
        "stack-trace-failure2.cc",
        "environment.cc",
    ],
)

cc_binary(
    name = "main",
    deps = [
        "@com_github_google_glog//:glog"
    ],
    srcs = [
        "main.cc"
    ],
)
